[gd_scene load_steps=10 format=3 uid="uid://dxu0ysd1remq3"]

[ext_resource type="Script" path="res://main.gd" id="1_d7yuh"]
[ext_resource type="Texture2D" uid="uid://b66ohwvetgjyb" path="res://sprite/grid.png" id="1_op8jp"]
[ext_resource type="PackedScene" uid="uid://dvkrmgwrqpyf5" path="res://player.tscn" id="2_d1yy1"]
[ext_resource type="PackedScene" uid="uid://mb8pbw816m6o" path="res://enemy.tscn" id="3_c56cy"]
[ext_resource type="Texture2D" uid="uid://sfomu6l26a78" path="res://sprite/hazard_wall.png" id="5_p2b6t"]
[ext_resource type="PackedScene" uid="uid://bfcf8iqqfkq22" path="res://game_ui.tscn" id="6_5kv7e"]
[ext_resource type="Script" path="res://crafting.gd" id="7_6anc5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_auiei"]
texture = ExtResource("5_p2b6t")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_tkrm3"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_auiei")

[node name="main" type="Node2D"]
script = ExtResource("1_d7yuh")
enemy = ExtResource("3_c56cy")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.141176)
texture_filter = 1
texture_repeat = 2
position = Vector2(568, 616)
scale = Vector2(4, 4)
texture = ExtResource("1_op8jp")
region_enabled = true
region_rect = Rect2(0, 0, 320, 320)

[node name="enemy" parent="." instance=ExtResource("3_c56cy")]
position = Vector2(615, 223)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_tkrm3")
format = 2
layer_0/tile_data = PackedInt32Array(65534, 0, 0, 131070, 0, 1, 65535, 65536, 0, 131071, 65536, 1, 196606, 0, 0, 262142, 0, 1, 196607, 65536, 0, 262143, 65536, 1, 327678, 0, 0, 393214, 0, 1, 327679, 65536, 0, 393215, 65536, 1, 458750, 0, 0, 524286, 0, 1, 458751, 65536, 0, 524287, 65536, 1, 589822, 0, 0, 655358, 0, 1, 589823, 65536, 0, 655359, 65536, 1, 720894, 0, 0, 786430, 0, 1, 720895, 65536, 0, 786431, 65536, 1, 851966, 0, 0, 917502, 0, 1, 851967, 65536, 0, 917503, 65536, 1, 983038, 0, 0, 1048574, 0, 1, 983039, 65536, 0, 1048575, 65536, 1, 1114110, 0, 0, 1179646, 0, 1, 1114111, 65536, 0, 1179647, 65536, 1, 1245182, 0, 0, 1310718, 0, 1, 1245183, 65536, 0, 1310719, 65536, 1, 1376254, 0, 0, 1441790, 0, 1, 1376255, 65536, 0, 1441791, 65536, 1, 1507326, 0, 0, 1572862, 0, 1, 1507327, 65536, 0, 1572863, 65536, 1, 1638398, 0, 0, 1703934, 0, 1, 1638399, 65536, 0, 1703935, 65536, 1, 1769470, 0, 0, 1835006, 0, 1, 1769471, 65536, 0, 1835007, 65536, 1, 1900542, 0, 0, 1966078, 0, 1, 1900543, 65536, 0, 1966079, 65536, 1, 2031614, 0, 0, 2097150, 0, 1, 2031615, 65536, 0, 2097151, 65536, 1, 2162686, 0, 0, 2228222, 0, 1, 2162687, 65536, 0, 2228223, 65536, 1, 2293758, 0, 0, 2359294, 0, 1, 2293759, 65536, 0, 2359295, 65536, 1, 2424830, 0, 0, 2490366, 0, 1, 2424831, 65536, 0, 2490367, 65536, 1, 2555902, 0, 0, 2621438, 0, 1, 2555903, 65536, 0, 2621439, 65536, 1, 2686974, 0, 0, 2752510, 0, 1, 2686975, 65536, 0, 2752511, 65536, 1, 2621440, 0, 0, 2686976, 0, 1, 2621441, 65536, 0, 2686977, 65536, 1, 2621442, 0, 0, 2686978, 0, 1, 2621443, 65536, 0, 2686979, 65536, 1, 2621444, 0, 0, 2686980, 0, 1, 2621445, 65536, 0, 2686981, 65536, 1, 2621446, 0, 0, 2686982, 0, 1, 2621447, 65536, 0, 2686983, 65536, 1, 2621448, 0, 0, 2686984, 0, 1, 2621449, 65536, 0, 2686985, 65536, 1, 2621450, 0, 0, 2686986, 0, 1, 2621451, 65536, 0, 2686987, 65536, 1, 2621452, 0, 0, 2686988, 0, 1, 2621453, 65536, 0, 2686989, 65536, 1, 2621454, 0, 0, 2686990, 0, 1, 2621455, 65536, 0, 2686991, 65536, 1, 2621456, 0, 0, 2686992, 0, 1, 2621457, 65536, 0, 2686993, 65536, 1, 2621458, 0, 0, 2686994, 0, 1, 2621459, 65536, 0, 2686995, 65536, 1, 2621460, 0, 0, 2686996, 0, 1, 2621461, 65536, 0, 2686997, 65536, 1, 2621462, 0, 0, 2686998, 0, 1, 2621463, 65536, 0, 2686999, 65536, 1, 2621464, 0, 0, 2687000, 0, 1, 2621465, 65536, 0, 2687001, 65536, 1, 2621466, 0, 0, 2687002, 0, 1, 2621467, 65536, 0, 2687003, 65536, 1, 2621468, 0, 0, 2687004, 0, 1, 2621469, 65536, 0, 2687005, 65536, 1, 2621470, 0, 0, 2687006, 0, 1, 2621471, 65536, 0, 2687007, 65536, 1, 2621472, 0, 0, 2687008, 0, 1, 2621473, 65536, 0, 2687009, 65536, 1, 2621474, 0, 0, 2687010, 0, 1, 2621475, 65536, 0, 2687011, 65536, 1, 2621476, 0, 0, 2687012, 0, 1, 2621477, 65536, 0, 2687013, 65536, 1, 2621478, 0, 0, 2687014, 0, 1, 2621479, 65536, 0, 2687015, 65536, 1, 2621480, 0, 0, 2687016, 0, 1, 2621481, 65536, 0, 2687017, 65536, 1, 2621482, 0, 0, 2687018, 0, 1, 2621483, 65536, 0, 2687019, 65536, 1, 2621484, 0, 0, 2687020, 0, 1, 2621485, 65536, 0, 2687021, 65536, 1, 2621486, 0, 0, 2687022, 0, 1, 2621487, 65536, 0, 2687023, 65536, 1, 2621488, 0, 0, 2687024, 0, 1, 2621489, 65536, 0, 2687025, 65536, 1, 2621490, 0, 0, 2687026, 0, 1, 2621491, 65536, 0, 2687027, 65536, 1, 2621492, 0, 0, 2687028, 0, 1, 2621493, 65536, 0, 2687029, 65536, 1, 2621494, 0, 0, 2687030, 0, 1, 2621495, 65536, 0, 2687031, 65536, 1, 2621496, 0, 0, 2687032, 0, 1, 2621497, 65536, 0, 2687033, 65536, 1, 2621498, 0, 0, 2687034, 0, 1, 2621499, 65536, 0, 2687035, 65536, 1, 2621500, 0, 0, 2687036, 0, 1, 2621501, 65536, 0, 2687037, 65536, 1, 2621502, 0, 0, 2687038, 0, 1, 2621503, 65536, 0, 2687039, 65536, 1, 2621504, 0, 0, 2687040, 0, 1, 2621505, 65536, 0, 2687041, 65536, 1, 2621506, 0, 0, 2687042, 0, 1, 2621507, 65536, 0, 2687043, 65536, 1, 2621508, 0, 0, 2687044, 0, 1, 2621509, 65536, 0, 2687045, 65536, 1, 2621510, 0, 0, 2687046, 0, 1, 2621511, 65536, 0, 2687047, 65536, 1, 2621512, 0, 0, 2687048, 0, 1, 2621513, 65536, 0, 2687049, 65536, 1, 2228296, 0, 0, 2293832, 0, 1, 2228297, 65536, 0, 2293833, 65536, 1, 2359368, 0, 0, 2424904, 0, 1, 2359369, 65536, 0, 2424905, 65536, 1, 2490440, 0, 0, 2555976, 0, 1, 2490441, 65536, 0, 2555977, 65536, 1, 1441864, 0, 0, 1507400, 0, 1, 1441865, 65536, 0, 1507401, 65536, 1, 1572936, 0, 0, 1638472, 0, 1, 1572937, 65536, 0, 1638473, 65536, 1, 1704008, 0, 0, 1769544, 0, 1, 1704009, 65536, 0, 1769545, 65536, 1, 1835080, 0, 0, 1900616, 0, 1, 1835081, 65536, 0, 1900617, 65536, 1, 1966152, 0, 0, 2031688, 0, 1, 1966153, 65536, 0, 2031689, 65536, 1, 2097224, 0, 0, 2162760, 0, 1, 2097225, 65536, 0, 2162761, 65536, 1, -65538, 0, 0, -2, 0, 1, -65537, 65536, 0, -1, 65536, 1, -131072, 0, 0, -65536, 0, 1, -131071, 65536, 0, -65535, 65536, 1, -131070, 0, 0, -65534, 0, 1, -131069, 65536, 0, -65533, 65536, 1, -131068, 0, 0, -65532, 0, 1, -131067, 65536, 0, -65531, 65536, 1, -131066, 0, 0, -65530, 0, 1, -131065, 65536, 0, -65529, 65536, 1, -131064, 0, 0, -65528, 0, 1, -131063, 65536, 0, -65527, 65536, 1, -131062, 0, 0, -65526, 0, 1, -131061, 65536, 0, -65525, 65536, 1, -131060, 0, 0, -65524, 0, 1, -131059, 65536, 0, -65523, 65536, 1, -131058, 0, 0, -65522, 0, 1, -131057, 65536, 0, -65521, 65536, 1, -131056, 0, 0, -65520, 0, 1, -131055, 65536, 0, -65519, 65536, 1, -131054, 0, 0, -65518, 0, 1, -131053, 65536, 0, -65517, 65536, 1, -131052, 0, 0, -65516, 0, 1, -131051, 65536, 0, -65515, 65536, 1, -131050, 0, 0, -65514, 0, 1, -131049, 65536, 0, -65513, 65536, 1, -131048, 0, 0, -65512, 0, 1, -131047, 65536, 0, -65511, 65536, 1, -131046, 0, 0, -65510, 0, 1, -131045, 65536, 0, -65509, 65536, 1, -131044, 0, 0, -65508, 0, 1, -131043, 65536, 0, -65507, 65536, 1, -131042, 0, 0, -65506, 0, 1, -131041, 65536, 0, -65505, 65536, 1, -131040, 0, 0, -65504, 0, 1, -131039, 65536, 0, -65503, 65536, 1, -131038, 0, 0, -65502, 0, 1, -131037, 65536, 0, -65501, 65536, 1, -131036, 0, 0, -65500, 0, 1, -131035, 65536, 0, -65499, 65536, 1, -131034, 0, 0, -65498, 0, 1, -131033, 65536, 0, -65497, 65536, 1, -131032, 0, 0, -65496, 0, 1, -131031, 65536, 0, -65495, 65536, 1, -131030, 0, 0, -65494, 0, 1, -131029, 65536, 0, -65493, 65536, 1, -131028, 0, 0, -65492, 0, 1, -131027, 65536, 0, -65491, 65536, 1, -131026, 0, 0, -65490, 0, 1, -131025, 65536, 0, -65489, 65536, 1, -131024, 0, 0, -65488, 0, 1, -131023, 65536, 0, -65487, 65536, 1, -131022, 0, 0, -65486, 0, 1, -131021, 65536, 0, -65485, 65536, 1, -131020, 0, 0, -65484, 0, 1, -131019, 65536, 0, -65483, 65536, 1, -131018, 0, 0, -65482, 0, 1, -131017, 65536, 0, -65481, 65536, 1, -131016, 0, 0, -65480, 0, 1, -131015, 65536, 0, -65479, 65536, 1, -131014, 0, 0, -65478, 0, 1, -131013, 65536, 0, -65477, 65536, 1, -131012, 0, 0, -65476, 0, 1, -131011, 65536, 0, -65475, 65536, 1, -131010, 0, 0, -65474, 0, 1, -131009, 65536, 0, -65473, 65536, 1, -131008, 0, 0, -65472, 0, 1, -131007, 65536, 0, -65471, 65536, 1, -131006, 0, 0, -65470, 0, 1, -131005, 65536, 0, -65469, 65536, 1, -131004, 0, 0, -65468, 0, 1, -131003, 65536, 0, -65467, 65536, 1, -131002, 0, 0, -65466, 0, 1, -131001, 65536, 0, -65465, 65536, 1, -131000, 0, 0, -65464, 0, 1, -130999, 65536, 0, -65463, 65536, 1, 917576, 0, 0, 983112, 0, 1, 917577, 65536, 0, 983113, 65536, 1, 1048648, 0, 0, 1114184, 0, 1, 1048649, 65536, 0, 1114185, 65536, 1, 1179720, 0, 0, 1245256, 0, 1, 1179721, 65536, 0, 1245257, 65536, 1, 1310792, 0, 0, 1376328, 0, 1, 1310793, 65536, 0, 1376329, 65536, 1, 786504, 0, 0, 852040, 0, 1, 786505, 65536, 0, 852041, 65536, 1, 655432, 0, 0, 720968, 0, 1, 655433, 65536, 0, 720969, 65536, 1, 524360, 0, 0, 589896, 0, 1, 524361, 65536, 0, 589897, 65536, 1, 393288, 0, 0, 458824, 0, 1, 393289, 65536, 0, 458825, 65536, 1, 262216, 0, 0, 327752, 0, 1, 262217, 65536, 0, 327753, 65536, 1, 131144, 0, 0, 196680, 0, 1, 131145, 65536, 0, 196681, 65536, 1, 72, 0, 0, 65608, 0, 1, 73, 65536, 0, 65609, 65536, 1)

[node name="Player" parent="." instance=ExtResource("2_d1yy1")]
position = Vector2(551, 296)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(1.3, 1.3)

[node name="Game_ui" parent="Player/Camera2D" instance=ExtResource("6_5kv7e")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = -278.0
offset_top = -150.0
offset_right = -195.0
offset_bottom = -82.0
grow_horizontal = 1
grow_vertical = 1

[node name="kettle_button" type="Button" parent="Player/Camera2D"]
offset_left = 300.0
offset_top = -248.0
offset_right = 442.0
offset_bottom = -216.0
text = "Котёл
"

[node name="Control" type="Control" parent="Player/Camera2D"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = -578.0
offset_top = -324.0
offset_right = 576.0
offset_bottom = 322.0
script = ExtResource("7_6anc5")

[node name="Panel_kattle" type="Panel" parent="Player/Camera2D/Control"]
layout_mode = 0
offset_left = 448.0
offset_top = 106.0
offset_right = 706.0
offset_bottom = 558.0

[node name="to_main_button" type="Button" parent="Player/Camera2D/Control"]
layout_mode = 0
offset_left = 893.0
offset_top = 536.0
offset_right = 1005.0
offset_bottom = 568.0
text = "Назад в игру
"

[node name="craft_button" type="Button" parent="Player/Camera2D/Control"]
layout_mode = 0
offset_left = 716.0
offset_top = 294.0
offset_right = 866.0
offset_bottom = 325.0
text = "Варить"

[node name="result_of_craft" type="Label" parent="Player/Camera2D/Control"]
layout_mode = 0
offset_left = 871.0
offset_top = 112.0
offset_right = 1021.0
offset_bottom = 534.0

[node name="discription" type="Label" parent="Player/Camera2D/Control"]
layout_mode = 0
offset_left = 436.0
offset_top = 560.0
offset_right = 746.0
offset_bottom = 646.0

[node name="ingridient_in_kettle" type="Label" parent="Player/Camera2D/Control"]
layout_mode = 0
offset_left = 448.0
offset_top = 106.0
offset_right = 704.0
offset_bottom = 556.0

[connection signal="pressed" from="Player/Camera2D/kettle_button" to="." method="_on_kettle_button_pressed"]
[connection signal="pressed" from="Player/Camera2D/Control/to_main_button" to="." method="_on_to_main_button_pressed"]
